# sia-watermarking-rust

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Makefile  package-lock.json  package.json
lib/sia/rust/cli/: Cargo.toml
lib/sia/rust/cli/src/: main.rs  timer.rs
lib/sia/rust/embedding/: Cargo.toml
lib/sia/rust/embedding/src/: haar.rs  lib.rs
lib/sia/rust/embedding/src/haar/: constants.rs  mod.rs  utils.rs
lib/sia/rust/embedding/src/io/: data.rs  mod.rs  steganography.rs
lib/sia/rust/embedding/src/utils/: constants.rs  mod.rs
lib/sia/rust/encoding/: Cargo.toml
lib/sia/rust/encoding/src/: lib.rs
lib/sia/rust/feature/: Cargo.toml
lib/sia/rust/feature/benches/: zernike_matrix_benchmark.rs
lib/sia/rust/feature/src/: feature_types.rs  lib.rs
lib/sia/rust/feature/src/moments/: mod.rs
lib/sia/rust/feature/src/moments/zernike/: constants.rs  mod.rs
lib/sia/rust/image-features/: Cargo.toml
lib/sia/rust/image-features/src/: lib.rs
lib/sia/rust/moments/: Cargo.toml
lib/sia/rust/moments/src/: lib.rs
lib/sia/rust/pseudo-zernike/: Cargo.toml
lib/sia/rust/signature/: Cargo.toml
lib/sia/rust/signature/src/: ecdsa.rs  keypair.rs  lib.rs
lib/sia/rust/three-bit-quantization/: Cargo.toml
lib/sia/rust/three-bit-quantization/src/: lib.rs
lib/sia/rust/utils/: Cargo.toml
lib/sia/rust/utils/src/: bytes.rs  constants.rs  format.rs  lib.rs  math.rs  pseudo_random.rs
lib/sia/rust/watermarking/: Cargo.toml
lib/sia/rust/watermarking/src/: lib.rs  process.rs  watermark.rs  wavelet.rs
lib/sia/rust/watermarking/src/process/: wavelet.rs
lib/sia/rust/watermarking/src/process/wavelet/: utils.rs
lib/sia/rust/watermarking/tests/: .gitignore
lib/sia/rust/web/: Cargo.toml
lib/sia/rust/web/src/: image_info.rs  image_model.rs  lib.rs  logging.rs  watermarking_process.rs  web_image.rs
lib/sia/rust/zernike/: Cargo.toml
lib/sia/rust/zernike/benches/: zernike_matrix_benchmark.rs
lib/sia/rust/zernike/src/: calc.rs  constants.rs  lib.rs
src/: App.css  App.test.tsx  App.tsx  lib.rs
src/Canvas/: Canvas.tsx
src/Content/: Content.tsx  image.ts  utils.ts
src/WatermarkingPreview/: WatermarkingPreview.tsx
test/: test-color-1024.jp2  test-color-128.heic  test-color-128.jp2  test-color-128.tif  test-color-256.jp2  test-color-512.jp2  test-small-lzw.tiff  test-small.tiff
