[package]
name = "three-bit-quantization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dependencies.getrandom]
version = "0.2.7"
features = ["js"]

[dependencies.bitvec]
version = "1.0.1"
features = []