[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
assert_approx_eq = "1.1.0"
puruspe = "0.2.0"

[dependencies.ndarray]
version = "0.15.6"
default-features = false
features = []