[package]
name = "watermarking"
version = "0.1.0"
edition = "2021"

[dependencies]
dwt = "0.5.2"
assert_approx_eq = "1.1.0"
base64 = "0.13.0"

utils = { path = "../utils" }
embedding = { path = "../embedding" }
feature = { path = "../feature" }
signature = { path = "../signature" }
three-bit-quantization = { path = "../three-bit-quantization" }

[dependencies.image]
version = "0.24.3"
default-features = false
features = ["gif", "jpeg", "png", "pnm", "tiff", "bmp"]

[dependencies.imageproc]
version = "0.23.0"
default-features = false
features = []

[dependencies.ndarray]
version = "0.15.6"
default-features = false
features = []

[dependencies.bitvec]
version = "1.0.1"
features = []