[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.59"
base64 = "0.13.0"
watermarking = { path = "../watermarking" }

[dependencies.image]
version = "0.24.3"
default-features = false
features = ["gif", "jpeg", "png", "tiff", "bmp"]

[dependencies.web-sys]
version = "0.3.59"
features = [
    "Document",
    "Element",
    "Blob",
    "HtmlElement",
    "Node",
    "Window",
    "CanvasRenderingContext2d",
    "ImageData",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "console",
    'CssStyleDeclaration',
    'EventTarget',
]