[package]
name = "zernike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
assert_approx_eq = "1.1.0"
utils = { path = "../utils" }
moments = { path = "../moments" }
feature = { path = "../feature" }

[dependencies.ndarray]
version = "0.15.6"
default-features = false
features = []

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "zernike_matrix_benchmark"
harness = false